--- a/css/styles.css
+++ b/css/styles.css
@@ -1,23 +1,58 @@
-body{
-    font-family: Montserrat,
-    sans-serif;
-}
-
-.header {
-background-color: blueviolet;
-}
-.list{
-    list-style: none;
-}
-.link{
-    text-decoration:none ;
-}
-
-.header-link {
-
-font-weight: 500;
-font-size: 16px;
-line-height: 1.25;
-color: #FFFFFF;
-
-}
+                                          :root {
+                                             --main-text-color: #999999;
+                                             --second-text-color: #FFFFFF;
+                                             --main-tittle-color: #FFFFFF;
+                                             --second-tittle-color: #323232;
+                                         }
+                                         
+                                         body {
+                                             font-family: Montserrat, sans-serif;
+                                         }
+                                         
+                                         .header {
+                                             background-color: blueviolet;
+                                         }
+                                         
+                                         .list {
+                                             list-style: none;
+                                         }
+                                         
+                                         .link {
+                                             text-decoration: none;
+                                         }
+                                         
+                                         .header-link {
+                                             font-weight: 500;
+                                             font-size: 16px;
+                                             line-height: 1.25;
+                                             color: #FFFFFF;
+                                         }
+                                         
+                                         .hero {
+                                             background-color: #362b2b;
+                                         }
+                                         
+                                         .hero-text {
+                                             font-weight: 500;
+                                             font-size: 16px;
+                                             line-height: calc(20 / 16);
+                                             /* identical to box height */
+                                             text-align: center;
+                                             color: #FFFFFF;
+                                         }
+                                         
+                                         .hero-tittle {
+                                             font-weight: 800;
+                                             font-size: 48px;
+                                             line-height: calc(64 / 48);
+                                             text-align: center;
+                                             color: #FFFFFF;
+                                         }
+                                         
+                                         .hero-button {
+                                             font-weight: 500;
+                                             font-size: 16px;
+                                             line-height: calc(20 / 16);
+                                             text-align: center;
+                                             color: #FFFFFF;
+                                         }
