--- a/css/styles.css
+++ b/css/styles.css
@@ -74,6 +74,22 @@ body {
 
 .mobile-list-title {
   font-size: 18px;
-  line-height: 22px;
+  line-height: 1.22;
   color: #000000;
+}
+
+.mobile-list-text {
+  font-size: 14px;
+  line-height: 1.57;
+  color: var(--main-text-color);
+}
+.mobile-btn {
+  color: #ffffff;
+  background: #4985ff;
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  text-align: center;
+  cursor: pointer;
 }
