--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@
   --second-text-color: #ffffff;
   --main-tittle-color: #ffffff;
   --second-tittle-color: #323232;
+  --accent-color: #4985ff;
 }
 
 body {
@@ -92,4 +93,38 @@ body {
   line-height: 20px;
   text-align: center;
   cursor: pointer;
+}
+
+.standart-title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.47;
+
+  color: var(--second-tittle-color);
+}
+.standart-text {
+  font-size: 16px;
+  line-height: 1.56;
+
+  color: var(--main-text-color);
+}
+.standart-link {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.25;
+
+  color: var(--accent-color);
+}
+
+.standart-item-count {
+  font-size: 36px;
+  line-height: 1.47;
+
+  color: #000000;
+}
+.standart-item-text {
+  font-size: 16px;
+  line-height: 1.56;
+
+  color: var(--main-text-color);
 }
