--- a/css/styles.css
+++ b/css/styles.css
@@ -6,12 +6,39 @@
   --accent-color: #4985ff;
 }
 
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+  padding: 0;
+}
+
+/* Header */
+
+.container {
+  width: 1140px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font-family: Montserrat, sans-serif;
 }
 
 .header {
   background-color: blueviolet;
+  padding-top: 40px;
+  padding-bottom: 40px;
 }
 
 .list {
