--- a/css/styles.css
+++ b/css/styles.css
@@ -204,3 +204,64 @@ body {
 
   color: var(--main-text-color);
 }
+
+.works {
+  padding-top: 100px;
+  padding-bottom: 85px;
+  background-color: #323232;
+}
+
+.works-title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.47;
+  color: var(--main-tittle-color);
+}
+
+.works-btn {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  text-align: center;
+  color: #ffffff;
+}
+
+.works-header {
+  margin-bottom: 70px;
+}
+
+.works-heading {
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 1.22;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.works-heading span {
+  color: var(--accent-color);
+}
+
+.works-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.56;
+  color: var(--main-text-color);
+  margin-bottom: 30px;
+}
+
+.works-link {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.25;
+  color: var(--accent-color);
+}
+
+.works-list {
+  padding-bottom: 85px;
+  border-bottom: 1px solid #e0e0e0;
+}
