--- a/css/styles.css
+++ b/css/styles.css
@@ -250,6 +250,7 @@ body {
   font-size: 36px;
   line-height: 1.47;
   color: var(--main-tittle-color);
+  width: 540px;
 }
 
 .works-btn {
@@ -260,10 +261,18 @@ body {
   line-height: 20px;
   text-align: center;
   color: #ffffff;
+  min-width: 200px;
+  height: 45px;
+  border-radius: 30px;
+  background-color: var(--accent-color);
+  border: none;
 }
 
 .works-header {
   margin-bottom: 70px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .works-heading {
@@ -298,4 +307,14 @@ body {
 .works-list {
   padding-bottom: 85px;
   border-bottom: 1px solid #e0e0e0;
+  display: flex;
+}
+
+.works-item {
+  width: calc((100% - 60px) / 3);
+  margin-left: 30px;
+}
+
+.works-item:first-child {
+  margin-left: 0;
 }
