--- a/css/styles.css
+++ b/css/styles.css
@@ -44,11 +44,26 @@ body {
 }
 
 .header {
-  background-color: blueviolet;
+  position: absolute;
+  width: 100%;
   padding-top: 40px;
   padding-bottom: 40px;
 
   border-bottom: 1px solid #a1a1a1;
+}
+
+.current {
+  position: relative;
+}
+
+.current::after {
+  content: "";
+  width: 100%;
+  height: 2px;
+  background-color: #fff;
+  display: block;
+  position: absolute;
+  bottom: -40px;
 }
 
 .header-list {
@@ -56,20 +71,22 @@ body {
   justify-content: flex-end;
 }
 
-.header-item:not(:last-child) {
+/* .header-item:not(:last-child) {
   margin-right: 40px;
-}
+} */
 
 .header-link {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.25;
   color: #ffffff;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .hero {
   background-color: #362b2b;
-  padding-top: 220px;
+  padding-top: 320px;
   padding-bottom: 335px;
   background-image: linear-gradient(
       0deg,
