--- a/css/styles.css
+++ b/css/styles.css
@@ -407,12 +407,12 @@ body {
   height: 100vh;
   top: 0;
   left: 0;
-  transition: transform 300ms, opacity 300ms, visibility 300ms;
+  transition: transform 500ms, opacity 300ms, visibility 300ms;
   transform: rotate(0);
 }
 
 .backdrop.is-hidden .modal {
-  transform: rotate(0);
+  transform: translate(-50%, -50%) rotate(0);
 }
 
 .is-hidden {
@@ -428,8 +428,8 @@ body {
   background-color: #FFFFFF;
   top: 50%;
   left: 50%;
-  transform:rotate(360deg) translate(-50%, -50%);
-  transition: transform 300ms;
+  transform: translate(-50%, -50%) rotate(360deg);
+  transition: transform 500ms;
 }
 
 .modal-btn {
