--- a/css/main.css
+++ b/css/main.css
@@ -17,15 +17,6 @@ h6 {
   padding: 0;
 }
 
-/* Header */
-
-.container {
-  width: 1140px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin: 0 auto;
-}
-
 ul {
   margin: 0;
   padding: 0;
@@ -43,362 +34,25 @@ body {
   text-decoration: none;
 }
 
-.header {
-  position: absolute;
-  width: 100%;
-  padding-top: 40px;
-  padding-bottom: 40px;
-
-  border-bottom: 1px solid #a1a1a1;
+.container {
+  width: 1140px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
 }
 
-.current {
-  position: relative;
-}
-
-.current::after {
-  content: "";
-  width: 100%;
-  height: 2px;
-  background-color: #fff;
-  display: block;
-  position: absolute;
-  bottom: -40px;
-}
-
-.header-list {
-  display: flex;
-  justify-content: flex-end;
-}
-
-/* .header-item:not(:last-child) {
-  margin-right: 40px;
-} */
-
-.header-link {
+.button {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.25;
-  color: #ffffff;
-  padding-left: 20px;
-  padding-right: 20px;
-}
-
-.hero {
-  background-color: #362b2b;
-  padding-top: 320px;
-  padding-bottom: 335px;
-  background-image: linear-gradient(0deg,
-      rgba(0, 0, 0, 0.2),
-      rgba(0, 0, 0, 0.2)),
-    url(../img/hero.jpg);
-  background-repeat: no-repeat;
-  margin: 0 auto;
-  max-width: 1920px;
-  background-size: cover;
-  background-position: center;
-}
-
-.hero-text {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: calc(20 / 16);
-  /* identical to box height */
   text-align: center;
   color: #ffffff;
-  margin-bottom: 20px;
-}
-
-.hero-tittle {
-  font-weight: 800;
-  font-size: 48px;
-  line-height: calc(64 / 48);
-  text-align: center;
-  color: #ffffff;
-  max-width: 829px;
-  margin: 0 auto;
-  margin-bottom: 50px;
-}
-
-.hero-button {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: calc(20 / 16);
-  text-align: center;
-  color: #ffffff;
-  margin: 0 auto;
-  display: block;
   width: 200px;
   height: 45px;
   border-radius: 30px;
   background-color: var(--accent-color);
   border: none;
 }
-
-.mobile {
-  padding-top: 110px;
-  padding-bottom: 110px;
-}
-
-.mobile-title {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.42;
-  text-align: center;
-  color: var(--second-tittle-color);
-
-  max-width: 739px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 50px;
-}
-
-.mobile-text {
-  font-size: 16px;
-  line-height: 1.56;
-  text-align: center;
-  color: var(--main-text-color);
-
-  max-width: 730px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 70px;
-}
-
-.mobile-list-title {
-  font-weight: 600;
-  font-size: 18px;
-  line-height: 1.22;
-  color: #000000;
-  margin-bottom: 12px;
-}
-
-.mobile-list-text {
-  font-size: 14px;
-  line-height: 1.57;
-  color: var(--main-text-color);
-}
-
-.mobile-list {
-  margin-bottom: 55px;
-  display: flex;
-  margin-left: -30px;
-}
-
-.mobile-item {
-  width: calc(100% / 3 - 30px);
-  margin-left: 30px;
-  display: flex;
-}
-
-.mobile-item-content {
-  padding-top: 45px;
-}
-
-.circle-out {
-  width: 110px;
-  height: 110px;
-  border-radius: 50%;
-  border: 1px solid #e0e0e0;
-  justify-content: center;
-  align-items: center;
-  display: flex;
-  flex-shrink: 0;
-  margin-right: 17px;
-}
-
-.circle-out:hover .circle-in {
-  background-color: var(--accent-color);
-}
-
-.circle-out:hover .mobile-icon {
-  fill: var(--main-tittle-color);
-}
-
-.circle-in {
-  width: 90px;
-  height: 90px;
-  border-radius: 50%;
-  border: 1px solid #4985ff;
-  justify-content: center;
-  align-items: center;
-  display: flex;
-}
-
-.mobile-icon {
-  fill: var(--accent-color);
-}
-
-.mobile-btn {
-  color: #ffffff;
-  background: #4985ff;
-  font-family: inherit;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  text-align: center;
-  cursor: pointer;
-
-  min-width: 200px;
-  height: 45px;
-  border-radius: 30px;
-  border: none;
-  display: block;
-  margin: 0 auto;
-}
-
-.standard {
-  padding-top: 100px;
-  padding-bottom: 70px;
-}
-
-.standard-content {
-  max-width: 489px;
-}
-
-.standard-top {
-  padding-bottom: 90px;
-  border-bottom: 1px solid #e0e0e0;
-  margin-bottom: 70px;
-
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.standart-list {
-  display: flex;
-  justify-content: space-evenly;
-}
-
-.standart-title {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.47;
-
-  color: var(--second-tittle-color);
-  margin-bottom: 40px;
-}
-
-.standart-text {
-  font-size: 16px;
-  line-height: 1.56;
-
-  color: var(--main-text-color);
-  margin-bottom: 30px;
-}
-
-.standart-link {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.25;
-
-  color: var(--accent-color);
-}
-
-.standart-item-count {
-  font-size: 36px;
-  line-height: 1.47;
-
-  color: #000000;
-}
-
-.standart-item-text {
-  font-size: 16px;
-  line-height: 1.56;
-
-  color: var(--main-text-color);
-}
-
-.standsrt-icon {
-  fill: var(--accent-color);
-  margin-right: 20px;
-}
-
-.works {
-  padding-top: 100px;
-  padding-bottom: 85px;
-  background-color: #ffffff;
-  background-image: linear-gradient(90deg, #504dc2 20.44%, #5f12d0 80.91%);
-  background-size: 100% 50%;
-  background-position: top;
-  background-repeat: no-repeat;
-}
-
-.works-title {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.47;
-  color: var(--main-tittle-color);
-  width: 540px;
-}
-
-.works-btn {
-  font-family: "Montserrat";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  text-align: center;
-  color: #ffffff;
-  min-width: 200px;
-  height: 45px;
-  border-radius: 30px;
-  background-color: var(--accent-color);
-  border: none;
-}
-
-.works-header {
-  margin-bottom: 70px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.works-heading {
-  font-weight: 600;
-  font-size: 18px;
-  line-height: 1.22;
-  margin-top: 30px;
-  margin-bottom: 30px;
-}
-
-.works-heading span {
-  color: var(--accent-color);
-}
-
-.works-text {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.56;
-  color: var(--main-text-color);
-  margin-bottom: 30px;
-}
-
-.works-link {
-  font-family: "Montserrat";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.25;
-  color: var(--accent-color);
-}
-
-.works-list {
-  padding-bottom: 85px;
-  border-bottom: 1px solid #e0e0e0;
-  display: flex;
-}
-
-.works-item {
-  width: calc((100% - 60px) / 3);
-  margin-left: 30px;
-}
-
-.works-item:first-child {
-  margin-left: 0;
-}
-
 
 .backdrop {
   position: fixed;
@@ -424,15 +78,320 @@ body {
   position: absolute;
   width: 528px;
   height: 521px;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) rotate(360deg) scale(1);
   transition: transform 500ms;
 }
 
-.modal-btn {
+.modal__btn {
   position: absolute;
   top: 8px;
   right: 8px;
 }
+
+.header {
+  position: absolute;
+  width: 100%;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  border-bottom: 1px solid #a1a1a1;
+}
+
+.current {
+  position: relative;
+}
+
+.current::after {
+  content: "";
+  width: 100%;
+  height: 2px;
+  background-color: #fff;
+  display: block;
+  position: absolute;
+  bottom: -40px;
+}
+
+.nav-list {
+  display: flex;
+  justify-content: flex-end;
+}
+
+/* .nav-list__item:not(:last-child) {
+  margin-right: 40px;
+} */
+.nav-list__link {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.25;
+  color: #ffffff;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.hero {
+  background-color: #362b2b;
+  padding-top: 320px;
+  padding-bottom: 335px;
+  background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(../img/hero.jpg);
+  background-repeat: no-repeat;
+  margin: 0 auto;
+  max-width: 1920px;
+  background-size: cover;
+  background-position: center;
+}
+
+.hero__text {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.25;
+  /* identical to box height */
+  text-align: center;
+  color: #ffffff;
+  margin-bottom: 20px;
+}
+
+.hero__title {
+  font-weight: 800;
+  font-size: 48px;
+  line-height: 1.3333333333;
+  text-align: center;
+  color: #ffffff;
+  max-width: 829px;
+  margin: 0 auto;
+  margin-bottom: 50px;
+}
+
+.hero__button {
+  margin: 0 auto;
+  display: block;
+}
+
+.mobile {
+  padding-top: 110px;
+  padding-bottom: 110px;
+}
+
+.mobile__title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.42;
+  text-align: center;
+  color: var(--second-tittle-color);
+  max-width: 739px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 50px;
+}
+
+.mobile__text {
+  font-size: 16px;
+  line-height: 1.56;
+  text-align: center;
+  color: var(--main-text-color);
+  max-width: 730px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 70px;
+}
+
+.mobile-list__title {
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 1.22;
+  color: #000000;
+  margin-bottom: 12px;
+}
+
+.mobile-list__text {
+  font-size: 14px;
+  line-height: 1.57;
+  color: var(--main-text-color);
+}
+
+.mobile-list {
+  margin-bottom: 55px;
+  display: flex;
+  margin-left: -30px;
+}
+
+.mobile-list__item {
+  width: calc(33.3333333333% - 30px);
+  margin-left: 30px;
+  display: flex;
+}
+
+.mobile-list__item-content {
+  padding-top: 45px;
+}
+
+.mobile-list__circle-out {
+  width: 110px;
+  height: 110px;
+  border-radius: 50%;
+  border: 1px solid #e0e0e0;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-shrink: 0;
+  margin-right: 17px;
+}
+
+.mobile-list__circle-out:hover .mobile-list__circle-in {
+  background-color: var(--accent-color);
+}
+
+.mobile-list__circle-out:hover .mobile-list__icon {
+  fill: var(--main-tittle-color);
+}
+
+.mobile-list__circle-in {
+  width: 90px;
+  height: 90px;
+  border-radius: 50%;
+  border: 1px solid #4985ff;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+}
+
+.mobile-list__icon {
+  fill: var(--accent-color);
+}
+
+.mobile__btn {
+  display: block;
+  margin: 0 auto;
+}
+
+.standard {
+  padding-top: 100px;
+  padding-bottom: 70px;
+}
+
+.standard-top__content {
+  max-width: 489px;
+}
+
+.standard-top {
+  padding-bottom: 90px;
+  border-bottom: 1px solid #e0e0e0;
+  margin-bottom: 70px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.standart-list {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.standard-top__title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.47;
+  color: var(--second-tittle-color);
+  margin-bottom: 40px;
+}
+
+.standard-top__text {
+  font-size: 16px;
+  line-height: 1.56;
+  color: var(--main-text-color);
+  margin-bottom: 30px;
+}
+
+.standard-top__link {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.25;
+  color: var(--accent-color);
+}
+
+.standart-list__item-count {
+  font-size: 36px;
+  line-height: 1.47;
+  color: #000000;
+}
+
+.standart-list__item-text {
+  font-size: 16px;
+  line-height: 1.56;
+  color: var(--main-text-color);
+}
+
+.standart-list__icon {
+  fill: var(--accent-color);
+  margin-right: 20px;
+}
+
+.works {
+  padding-top: 100px;
+  padding-bottom: 85px;
+  background-color: #ffffff;
+  background-image: linear-gradient(90deg, #504dc2 20.44%, #5f12d0 80.91%);
+  background-size: 100% 50%;
+  background-position: top;
+  background-repeat: no-repeat;
+}
+
+.works-header__title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.47;
+  color: var(--main-tittle-color);
+  width: 540px;
+}
+
+.works-header {
+  margin-bottom: 70px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.works-list__heading {
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 1.22;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.works-list__heading span {
+  color: var(--accent-color);
+}
+
+.works-list__text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.56;
+  color: var(--main-text-color);
+  margin-bottom: 30px;
+}
+
+.works-list__link {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.25;
+  color: var(--accent-color);
+}
+
+.works-list {
+  padding-bottom: 85px;
+  border-bottom: 1px solid #e0e0e0;
+  display: flex;
+}
+
+.works-list__item {
+  width: calc((100% - 60px) / 3);
+  margin-left: 30px;
+}
+
+.works-list__item:first-child {
+  margin-left: 0;
+}/*# sourceMappingURL=main.css.map */
